[metadata]
name = bitquery-python
version = 0.1
author = alb2001
author_email = alb2001@outlook.es
description = A simple package to query GraphQL using Bitquery
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alb2001/bitquery-python
project_urls =
    Bitquery Website = https://bitquery.io
    Bug Tracker = https://github.com/alb2001/bitquery-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9.2

[options.packages.find]
where = src
